--- a/kubernetes/apps/default/budibase/app/helmrelease.yaml
+++ b/kubernetes/apps/default/budibase/app/helmrelease.yaml
@@ -90,8 +90,16 @@ spec:
 
     tolerations: []
 
-    affinity: {}
-
+    #affinity: {}
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: kubernetes.io/arch
+                  operator: In
+                  values:
+                    - amd64
     globals:
       appVersion: "" # Use as an override to .Chart.AppVersion
       budibaseEnv: PRODUCTION
