--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
  # - ./appsmith/ks.yaml
   - ./baserow/ks.yaml
   #- ./budibase/ks.yaml
+  - ./couchdb/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
   - ./mongodb/ks.yaml
