--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/helmrelease.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/helmrelease.yaml
@@ -4,6 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: home-cluster
+  namespace: actions-runner-system
 spec:
   interval: 15m
   chart:
