--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -9,4 +9,4 @@ resources:
   - ./metrics-server/ks.yaml
   - ./reloader/ks.yaml
   - ./csi-driver-nfs/ks.yaml
-  - ./minio/ks.yaml
+  #- ./minio/ks.yaml
