--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -5,7 +5,8 @@ resources:
   - ./namespace.yaml
   - ./appsmith/ks.yaml
   - ./baserow/ks.yaml
- # - ./budibase/ks.yaml
+  # - ./budibase/ks.yaml
+  - ./cloudnative-pg/ks.yaml
   - ./couchdb/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
