--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   - ./mongodb/ks.yaml
   - ./n8n/ks.yaml
   - ./postgresql/ks.yaml
-  - ./postgresql16/ks.yaml
+  #- ./postgresql16/ks.yaml
   - ./redis/ks.yaml
   - ./redisinsight/ks.yaml
   - ./website/ks.yaml
