--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./appsmith/ks.yaml
   - ./baserow/ks.yaml
   # - ./budibase/ks.yaml
-  #- ./cloudnative-pg/ks.yaml
+  - ./cloudnative-pg/ks.yaml
   - ./couchdb/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
