--- a/kubernetes/apps/default/cloudnative-pg/cluster/helmrelease.yaml
+++ b/kubernetes/apps/default/cloudnative-pg/cluster/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
         maxParallel: 8
       destinationPath: &dest-path s3://cloudnative-pg/
       endpointURL: &endpoint-url http://minio.kube-system.svc.cluster.local:9000
-      serverName: postgres-v3 #This must increment when bootstrapping. You cannot have this be the same as the bootstrap version
+      serverName: postgres-v1 #This must increment when bootstrapping. You cannot have this be the same as the bootstrap version
       s3Credentials: &s3-creds
         accessKeyId:
           name: cloudnative-pg-s3-secrets
@@ -42,7 +42,7 @@ spec:
           key: AWS_SECRET_ACCESS_KEY
   # Note: externalClusters is needed when recovering from an existing cnpg cluster
   externalClusters:
-    - name: *previous-cluster
+    - name: postgres-v1
       barmanObjectStore:
         wal:
           compression: bzip2
