--- a/kubernetes/apps/default/cloudnative-pg/cluster/kustomization.yaml
+++ b/kubernetes/apps/default/cloudnative-pg/cluster/kustomization.yaml
@@ -4,5 +4,6 @@ kind: Kustomization
 namespace: default
 resources:
   - ./helmrelease.yaml
+  - ./scheduled-backup.yaml
   - ./service.yaml
   - ./pvc.yaml
