--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -3,18 +3,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  - ./appsmith/ks.yaml
+  #- ./appsmith/ks.yaml
   #- ./baserow/ks.yaml
   # - ./budibase/ks.yaml
-  #- ./cloudnative-pg/ks.yaml
-  - ./couchdb/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
-  - ./mongodb/ks.yaml
-  - ./n8n/ks.yaml
-  - ./postgresql/ks.yaml
-  #- ./postgresql16/ks.yaml
-  - ./redis/ks.yaml
-  - ./redisinsight/ks.yaml
+  #- ./n8n/ks.yaml
   - ./website/ks.yaml
   - ./whoami/ks.yaml
