--- a/kubernetes/apps/database/postgresql/app/backup-configmap.yaml
+++ b/kubernetes/apps/database/postgresql/app/backup-configmap.yaml
@@ -7,7 +7,7 @@ metadata:
 data:
   backup.sh: |
     #!/bin/bash
-    PGHOST='postgresql.default.svc.cluster.local'
+    PGHOST='postgresql.database.svc.cluster.local'
     PGUSER='postgres'
     BACKDIR=/bitnami/postgresql/backup
 
