--- a/kubernetes/apps/database/postgresql/pgadmin/helmrelease.yaml
+++ b/kubernetes/apps/database/postgresql/pgadmin/helmrelease.yaml
@@ -41,6 +41,6 @@ spec:
           Group: Servers
           Port: 5432
           Username: postgres
-          Host: postgresql.default.svc.cluster.local
+          Host: postgresql.database.svc.cluster.local
           SSLMode: prefer
           MaintenanceDB: app
