--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   #- ./porla/ks.yaml
   - ./prowlarr/ks.yaml
   - ./qbittorrent/ks.yaml
-  - ./radarr/ks.yaml
+  #- ./radarr/ks.yaml
   - ./sabnzbd/ks.yaml
-  - ./sonarr/ks.yaml
+  #- ./sonarr/ks.yaml
   - ./youtubedl/ks.yaml
