--- a/kubernetes/apps/database/cloudnative-pg/cluster/helmrelease.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/helmrelease.yaml
@@ -15,7 +15,7 @@ spec:
   primaryUpdateStrategy: unsupervised
   storage:
     size: 10Gi
-    storageClass: cnpg
+    storageClass: local-path
   superuserSecret:
     name: cloudnative-pg-secrets
   # bootstrap:
