--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   #- ./appsmith/ks.yaml
-  #- ./baserow/ks.yaml
+  - ./baserow/ks.yaml
   # - ./budibase/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
